# shittim

./: .gitignore  AGENT.md  FILE_MANIFEST.md  PROJECT_OVERVIEW.md  README.md  package.json
adr/: 0001-shittim工作区与工具链.md  0002-schema生成与兼容策略.md  0004-kernel-sqlite文件持久化基座.md  0005-computer-use可选profile边界.md  0006-child-task权威与taskcreate-v2迁移.md  README.md
docs/: IMPLEMENTATION_MATRIX.md  PROGRESS.md
docs/api/: README.md  audit-record.md  domain-policy.md  domain-task.md  error-catalog.md  event-catalog.md  kcp-preflight-dispatcher.md  kernel-control-protocol.md  kernel-kcp.md  kernel-sqlite.md  schema-generation.md  task-repository-contract.md
docs/sdk/: README.md  extension-sdk.md
rust/: Cargo.toml  rustfmt.toml
rust/crates/domain-policy/: Cargo.toml
rust/crates/domain-policy/src/: error.rs  lib.rs  matcher.rs  rate_limit.rs  resource_scope.rs  types.rs  uri.rs
rust/crates/domain-policy/tests/: policy_conformance.rs  resource_scope_containment.rs  uri_normalization.rs
rust/crates/domain-task/: Cargo.toml
rust/crates/domain-task/src/: action.rs  catalog.rs  error.rs  event_intent.rs  lib.rs  policy_outcome.rs  recovery.rs  task.rs  types.rs
rust/crates/domain-task/tests/: action_matrix.rs  property_transitions.rs  task_matrix.rs
rust/crates/kernel-authorization/: Cargo.toml
rust/crates/kernel-authorization/src/: canonical.rs  child_delta.rs  error.rs  lib.rs  material.rs  observation.rs  subject.rs
rust/crates/kernel-authorization/tests/: child_task_delta_projection.rs  material_authorization_projection.rs  observation_evidence_projection.rs  official_authorization_projection_fixtures.rs  subject_projection.rs
rust/crates/kernel-authorization/tests/support/: assertions.rs  fixtures.rs  mod.rs
rust/crates/kernel-contracts/: Cargo.toml
rust/crates/kernel-contracts/src/: canonical.rs  error.rs  lib.rs  timestamp.rs  validator.rs
rust/crates/kernel-contracts/tests/: action_child_v2_schema_conformance.rs  authorization_core_v2_schema_conformance.rs  business_v2_schema_conformance.rs  contract_validation.rs  event_v2_schema_conformance.rs  identity_challenge_evidence_v1_schema_conformance.rs  root_persistence_v2_schema_conformance.rs
rust/crates/kernel-kcp/: Cargo.toml
rust/crates/kernel-kcp/src/: dispatcher.rs  handlers.rs  lib.rs  ports.rs  preflight.rs  response.rs  runtime.rs  sqlite_adapter.rs
rust/crates/kernel-kcp/tests/: handlers.rs  preflight_dispatcher.rs  sqlite_integration.rs
rust/crates/kernel-sqlite/: Cargo.toml
rust/crates/kernel-sqlite/migrations/: 0001_initial.sql  0002_task_repository.sql  0003_versioned_event_outbox.sql  0004_root_task_create_v2.sql  0005_drop_v1_business_tables.sql  0006_action_and_transition.sql  0007_policy_and_permission_decision.sql  0008_approval_and_identity.sql
rust/crates/kernel-sqlite/src/: action.rs  action_tests.rs  action_transition.rs  approval.rs  approval_tests.rs  audit.rs  config.rs  error.rs  evaluation.rs  evaluation_tests.rs  identity.rs  lib.rs  migration.rs  migration_tests.rs  outbox.rs  outbox_tests.rs  permission_decision.rs  permission_decision_tests.rs  policy_rule.rs  policy_rule_tests.rs  rate_limit.rs  root_task_create_v2.rs  root_task_create_v2_tests.rs  savepoint_tests.rs  task.rs  task_tests.rs  tests.rs
rust/crates/kernel-task-creation/: Cargo.toml
rust/crates/kernel-task-creation/src/: allocation.rs  error.rs  lib.rs  normalization.rs  projection.rs
rust/crates/kernel-task-creation/tests/: official_task_creation_fixtures.rs
rust/crates/kernel-task-creation/tests/support/: allocation.rs  child.rs  mod.rs  preimage.rs  root.rs
rust/crates/schema-tool/: Cargo.toml
rust/crates/schema-tool/src/: canonicalize.rs  check.rs  codegen.rs  compatibility.rs  conditional_envelope.rs  contract_model.rs  error.rs  event_catalog.rs  generate.rs  json_pointer.rs  lib.rs  main.rs  manifest.rs  manifest_identity.rs  method_bindings.rs  names.rs  official_fixture.rs  paths.rs  production_stage.rs  resolve.rs  rust_codegen.rs  schema_walk.rs  target.rs  validate.rs
rust/crates/schema-tool/src/artifact_transaction/: error.rs  executor.rs  filesystem.rs  lock.rs  lock_conformance.rs  mod.rs  protocol.rs
rust/crates/schema-tool/src/artifact_transaction/conformance/: fault_fs.rs  matrix.rs  mod.rs  oracle.rs  primary_secondary.rs  reference_model.rs  scenario.rs  snapshot.rs  test_temp.rs  worklist.rs
rust/crates/schema-tool/tests/: cli_smoke.rs  event_catalog.rs  graph_projection.rs  method_bindings.rs  official_authorization_projection_fixtures.rs  official_task_fixtures.rs  pointer_cli.rs  tagged_union.rs
schemas/: manifest.json
schemas/examples/audit/: audit_record.system_internal.valid.json  audit_record.valid.json
schemas/examples/common/: actor.owner-reserved.json  actor.valid.json
schemas/examples/event/: task_created.valid.json
schemas/examples/jcs/: rfc8785-example.input.json
schemas/examples/kcp/: system_ping_query.valid.json
schemas/examples/policy/: policy_rule.confirm.valid.json
schemas/fixtures/kcp/: task_create_normalized_hash.v1.json  task_create_normalized_hash.v2.json
schemas/fixtures/manifest/: retained_ids.v1.json
schemas/fixtures/policy/: approval_event_allocation.v1.json  credential_ref.v1.json  local_presence_evidence.v1.json  material_authorization_projection.v1.json  observation_evidence_not_applicable.v1.json  observation_evidence_observed.v1.json  remote_approval_challenge.v1.json  remote_approval_response.v1.json  remote_approval_signature_preimage.v1.json  remote_signature_algorithm.v1.json  subject_projection.v1.json  system_authentication_challenge.v1.json  system_authentication_evidence.v1.json
schemas/fixtures/task/: child_task_delta_projection.v1.json  (+2 more)
scripts/: check-node-toolchain.mjs  check-schema.sh  docs-checkout-transaction.mjs  sync-docs-repository.mjs  sync-docs-repository.test.mjs  update-file-manifest.mjs
specs/: COMPUTER_USE.md  CONFORMANCE.md  CORE_ARCHITECTURE.md  EXTENSION_SDK.md  IDENTITY_MEMORY_INITIATIVE.md  IMPLEMENTATION_CONTRACTS.md  MODEL_RUNTIME.md  REFERENCES.md  SECURITY_PRIVILEGE.md
(+83 files in other folders)
