[workspace]
resolver = "2"
members = [
    "crates/kernel-contracts",
    "crates/schema-tool",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.97"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
jsonschema = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_canonicalizer = "0.3.2"
sha2 = "0.10"
thiserror = "2.0"
walkdir = "2.5"
