[workspace]
resolver = "2"
members = [
    "crates/domain-policy",
    "crates/domain-task",
    "crates/kernel-contracts",
    "crates/kernel-sqlite",
    "crates/schema-tool",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.97"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
jsonschema = "0.28"
proptest = "1.6"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_canonicalizer = "0.3.2"
sha2 = "0.10"
thiserror = "2.0"
tempfile = "3.20"
url = "2.5"
uuid = "1.24"
walkdir = "2.5"
