[package]
name = "kernel-kcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Non-connectable typed KCP application handlers for system.ping and Task create/get"

[dependencies]
chrono.workspace = true
kernel-contracts = { path = "../kernel-contracts" }
kernel-sqlite = { path = "../kernel-sqlite" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
