[package]
name = "kernel-task-creation"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pure root and child task creation normalization, projection, hashing, and allocation validation"

[dependencies]
domain-policy = { path = "../domain-policy" }
kernel-contracts = { path = "../kernel-contracts" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
hex.workspace = true
proptest.workspace = true
schema-tool = { path = "../schema-tool" }
sha2.workspace = true
